--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
+    </header>
 </body>
 </html>
